--- a/css/style.css
+++ b/css/style.css
@@ -2,27 +2,29 @@ html {
  height: 100%;
  margin: 0;
  padding: 0;
+ -webkit-font-smoothing: antialiased;
 }
 
 body {
  height: 100%;
  text-decoration: none;
- color:  #2c3c42;
- font-family: "arial";
- font-size: 10pt;
- font-weight: heavy;
- background: #FFFFFF;
+ color:  #666;
+ font-family: Arial, sans-serif;
+ font-size: 14px;
+ font-weight: 30;
+ background: #E7E8E8;
  margin: 0; /* it's good practice to zero the margin and padding of the body element to account for differing browser defaults */
  padding: 0;
  text-align: center; /* this centers the container in IE 5* browsers. The text is then set to the left aligned default in the #container selector */
- 
+ background: #E7E8E8 url(../images/bg-gray-texture.jpg) repeat top left;
+ -webkit-font-smoothing: antialiased;
 }
 
 .wrapper {
- min-height: 100%;
- height: auto !important;
- height: 100%;
  margin: 0 auto -2em;
+ height; 120px;
+ background-image: url("../images/back-header.jpg");
+ background-repeat: repeat-x;
 }
 
 .push {
@@ -32,18 +34,23 @@ body {
 .footer {
 height: 2em;
 font-size:80%;
-color:#526972;
+color: #4d4d4d;
 text-align:center;
 width:100%;
+position: absolute;
 } 
 
 
 
-a {color:#3D545D;}
+a {color:#4d4d4d;}
 a:active {color:#94a9be;}
 a:focus {color:#94a9be; outline: none; -moz-outline-style: none;}
 
-a.smallLink {font-size:85%; }
+a.smallLink {
+ font-size: 12px;
+ text-decoration: none;
+ color: #1B76A9;
+}
 
 a.bigLink {font-size:103%; }
 
@@ -51,7 +58,12 @@ span.smallText{color:#3D545D;font-size:92%;}
 span.smallerText{color:#3D545D;font-size:85%;}
 span.redText{color:red}
 span.normalText{color:#3D545D}
-span.smallGreyText{font-size:95%;font-weight:normal; color:gray}
+
+span.smallGreyText {
+ font-size: 85%;
+ font-weight: normal;
+ color: gray
+}
 
 img {border:0;}
 fieldset {border:0;}
@@ -62,28 +74,56 @@ select option { color: #3D545D; font-family: "arial"; font-size: 8pt; font-weigh
 
 input, select, multiple, textarea{color: #3D545D; font-family: "arial"; font-size: 8pt; font-weight: medium;}
 
-table#title {padding:0px; background-image:url('../images/organizationstitle.gif');background-repeat:no-repeat;height:84px;width:900px;}
-table.headerTable {padding:1px;width:900px;min-height:40px;background-image:url('../images/header.gif');background-repeat:no-repeat;}
+table#title {
+ padding: 0px;
+ background-image: url('../images/organizationstitle.jpg');
+ background-repeat: no-repeat;
+ height: 120px;
+ width: 900px;
+}
+
+table.headerTable {
+ padding: 1px;
+ width: 900px;
+ min-height:40px;
+ background: none !important;
+ border-collapse: collapse;
+}
 
 .headerText {font-size:125%;font-weight:bold; }
 
-span.searchLetter{margin:0px;padding-left:1.5px;padding-right:1.5px;background-color:white;}
-span.searchLetterSelected{margin:0px;padding-left:1.5px;padding-right:1.5px;background-color: #e0dfe3;}
-span.searchLetterSelected a:focus{color:#3D545D;}
-span.searchLetterSelected a:active{color:#3D545D;}
-
-#search_box {
-    width: 170px;
-    height: 19px;
-    background: url('../images/searchbox.gif');
+span.searchLetter {
+ margin: 0px;
+ padding-left: 1px;
+ padding-right: 1px;
+ color: #fff;
+ font-family: Courier, monospace;
 }
+
+span.searchLetter a {
+ color: #fff;
+}
+
+span.searchLetterSelected {
+ margin: 0px;
+ padding-left: 1px;
+ padding-right: 1px;
+ background-color: #A9D0E0;
+ color: #fff;
+}
+
+span.searchLetter a:hover {
+     text-decoration: none;
+     background-color: #4d4d4d;
+     margin: 0px;
+}
+
 #search_box #search_organization {
-    float: left;
-    padding: 0;
-    margin: 2px 0 0 6px;
-    border: 0;
-    width: 159px;
-    background: none;
+ float: right;
+ padding: 5px;
+ border: solid 1px #e0dfe3;
+ width: 180px;
+ background: #fff;
 }
 #search_box #go {
     float: right;
@@ -119,8 +159,8 @@ ul.tabs li{
 	display: table-cell;
 	float: left;
 	position: relative;
-	width:130px;
-	height: 19px;
+	width: 150px;
+	height: 40px;
 }
 
 ul.tabs a{
@@ -139,12 +179,9 @@ ul.coraldropdown{
 	position: absolute;
 	z-index: 999;
 	top: 100%;
-	width: 130px;
+	width: 154px;
 	display: none;
 	left: 0;
-	border: 1px solid #b8cee4; 
-	-moz-border-radius: 1px;
-	-webkit-border-radius: 1px;
 }
 
 ul.coraldropdown ul.coraldropdown{
@@ -159,20 +196,27 @@ ul.coraldropdown li{
 	position: relative;
 	list-style: none;
 	display: block;
-	height: 23px;
-	border-top: 1px solid #e2ebf4;
+	height: 40px;
+	width: 154px;
+	border-top: solid 1px #5a5a5a;
 }
 
-ul.coraldropdown li a{
+ul.coraldropdown li:first-child {
+	border-top: solid 1px #6195B2;
+}
+
+ul.coraldropdown li a {
 	display: block;
-	line-height:23px;
-	background-color:#f6f9fb;
-	background-repeat:no-repeat;
+	line-height: 23px;
+	background-color: #4d4d4d;
+	background-repeat: no-repeat;
+	padding-left: 0px;
 }
 
 
 ul.coraldropdown li a:hover{
-background-color:white;
+background-color: #1b76a9;
+cursor: pointer;
 }
 
 
@@ -196,40 +240,49 @@ table.dataTable {
 	max-width:895px;
 	width:895px;
 	font-size:90%;
+	margin-top: 11px;
+	margin-bottom: 10px;
 }
 
 
 table.dataTable td {
 	margin: 0;
-	padding: 2px 3px 2px 2px;
+	padding: 6px;
 	border-width: 1px 1px 0 0;
 	border-style: solid;
 	border-color: #e0dfe3;
-	background-color: white;
+	background-color: #f3f3f3;
 	-moz-border-radius: 0px;
+	vertical-align: middle;
 }
 
 
 
 table.dataTable td.alt {
 	margin: 0;
-	padding: 2px 3px 2px 2px;
+	padding: 6px;
 	border-width: 1px 1px 0 0;
 	border-style: solid;
 	border-color: #e0dfe3;
-	background-color: #f5f8fa;
+	background-color: #fff;
 	-moz-border-radius: 0px;
+	vertical-align: middle;
 }
 
 
 table.dataTable th {
 	margin: 0;
-	padding: 2px 3px 2px 2px;
+	padding: 6px;
 	border-width: 1px 1px 0 0;
 	border-style: solid;
-	border-color: #e0dfe3;
-	background-color: white;
+	border-color: #C9C9C9;
+	background-color: #CAD7E1;
 	-moz-border-radius: 0px;
+	vertical-align: middle;
+	font-weight: 300;
+	color: #000;
+	background: rgba(200, 200, 200, 0.5) url(../images/bg-diagonal-stripes.png) repeat top left !important;
+	border-bottom: 1px solid #C9C9C9 !important;
 }
 
 table.dataTable tr {vertical-align: top;}
@@ -295,62 +348,65 @@ table.sample td.bottom {
 
 
 .sidemenu{
-    background-color: white;
-    border-right: 1px solid #d2d2d5;
-    border-top: 1px solid #d2d2d5;
-    width: 108px;
+    background-color: #1b77aa;
+    width: 120px;
     vertical-align: top;
     text-align: left;
+    font-size: 12px;
+    color: #fff;
 }
 
-.sidemenu a:link{text-decoration: none;}
-.sidemenu a:hover {text-decoration: underline;}
-.sidemenu img{vertical-align: top;}
+.sidemenu a:link {
+    text-decoration: none;
+    color: #fff;
+}
+
+.sidemenu a:hover {
+    text-decoration: none;
+    color: #ccc;
+}
 
 .sidemenu span.icon{
-  float:left;
-  vertical-align: top;
-  text-align:center;
-  height:16px;
-  width:20px;
-} 
- 
-.sidemenu div{
-    padding: 6px 0px 6px 9px;
-    border-bottom: 1px solid #d2d2d5;
-    font-weight:normal;
-}
-.sidemenuselected{
-    padding: 6px 0px 6px 6px;
-    border-bottom: 1px solid #d2d2d5;
-    border-left: 1px solid #d2d2d5;
-    background-color: white;
-}
-.sidemenuunselected{
-    padding: 6px 0px 6px 6px;
-    border-bottom: 1px solid #d2d2d5;
-    border-left: 1px solid #d2d2d5;
-    background-color: #f2f5f7;
-    background-image:url('../images/tab.gif');
-    background-repeat:no-repeat;
-    min-height:16px;
+  display: none;
 }
 
-.sidemenuunselected span.link{
-	float:left;
-	clear:right;
+.sidemenu div {
 }
+
+.sidemenuselected {
+    padding: 10px;
+    border-bottom: 1px solid #1b77aa;
+    background-color: #DAE6EA;
+    width: 150px !important;
+}
+
+.sidemenuselected:last-child {
+    border-bottom: 1px solid #DAE6EA ;
+}
+
+.sidemenuunselected {
+	padding: 10px;
+	border-bottom: 1px solid #5295ba;
+width: 150px !important;
+}
+
+/*-*/
+
+.sidemenuselected a {
+     color: #1b77aa !important;
+}
+
+.sidemenuselected .link {
+     color: #1b77aa !important;
+}
+
+/*-*/
 
 .mainContent{
-    padding: 8px 14px 14px 14px; 
-    background-color: white; 
+    background-color: #f9fafb;
     text-align:left;
-    border-top: 1px solid #d2d2d5;
-    border-right: 1px solid #d2d2d5;
-    border-bottom: 1px solid #d2d2d5;
-    background-color: white;
     vertical-align: top;
-    
+    border: solid 1px #e0dfe3;
 }
 
 
@@ -426,38 +482,36 @@ table.borderedFormTable {
 }
 
 table.borderedFormTable td {
-	margin:3px;
-	padding:3px;
+	margin: 3px;
+	padding: 3px;
 	border-width: 1px 1px 0 0;
 	border-style: solid;
-	border-color: #e0dfe3;
-	background-color: white;
+	border-color: #6195B2;
+	background-color: #1B77AA;
 	-moz-border-radius: 0px;
 }
 
 table.borderedFormTable td.alt {
 	margin:3px;
 	padding:3px;
-	border-width: 1px 1px 0 0;
-	border-style: solid;
-	border-color: #e0dfe3;
+	border: solid 1px #e0dfe3;
 	background-color: #f4f8fc;
 	-moz-border-radius: 0px;
 }
 
 
 table.borderedFormTable td.searchRow {
-	margin:3px;
-	padding:3px;
-	border-width: 1px 1px 0 0;
-	border-style: solid;
-	border-color: #e0dfe3;
-	background-image:url('../images/search.gif');
-	background-repeat:no-repeat;
-	background-color: white;
+	margin: 3px;
+	padding: 10px;
+	background-color: #1B77AA;
 	-moz-border-radius: 0px;
 }
 
+table.borderedFormTable td.searchRow label b {
+     color: #fff;
+     font-weight: 100;
+     font-size: 11px;
+}
 
 table.borderedFormTable th {
 	margin:3px;
@@ -514,10 +568,8 @@ table.linedFormTable {
 
 table.linedFormTable td {
 	margin: 0;
-	padding: 3px 3px 3px 3px;
-	border-width: 1px 0 0 0;
-	border-style: solid;
-	border-color: #e6e5e9;
+	padding: 6px;
+	border: solid 1px #e6e5e9;
 	background-color: white;
 	-moz-border-radius: 0px;
 }
@@ -525,22 +577,19 @@ table.linedFormTable td {
 
 table.linedFormTable td.bottom {
 	margin: 0;
-	padding: 3px 3px 3px 3px;
-	border-width: 1px 0 0 0;
-	border-style: solid;
-	border-color: #e6e5e9;
+	padding: 6px;
+	border: solid 1px #e6e5e9;
 	background-color: white;
 	-moz-border-radius: 0px;
 }
 
 table.linedFormTable th {
 	margin: 0;
-	padding: 2px 3px 2px 2px;
-	border-width: 1px 0 0 0;
-	border-style: solid;
-	border-color: #e6e5e9;
+	padding: 6px;
+	border: solid 1px #e6e5e9;
 	background-color: #e9edf0;
 	-moz-border-radius: 0px;
+	background: rgba(200, 200, 200, 0.5) url(../images/bg-diagonal-stripes.png) repeat top left !important;
 }
 
 
@@ -581,16 +630,17 @@ table.noMargin td { border:0px;margin:0px; padding:0px; }
 div.thickboxDiv{display:none;}
 
 table.thickboxTable{
- padding:6px; 
+ padding:6px;
  text-decoration: none;
  color:  #2c3c42;
  font-family: "arial";
  font-size: 8pt;
  font-weight: heavy;
+ background-image: none !important;
 }
 
 table.thickboxTable td{
- padding:1px; 
+ padding: 2px;
 }
 
 .smallText{font-size:small;}
@@ -637,3 +687,528 @@ input.dp-applied {
 
 .adminAddInput{margin-top:5px;}
 .licenseAddInput{margin-top:5px;margin-bottom;5px;}
+
+hr {
+  border:0;
+  border-bottom: 1px solid #e0dfe3;
+  height: 0;
+  /*-*/width: auto !important;
+  background: #e0dfe3;
+}
+
+/*--- Additional Custom CSS ---*/
+
+.titleTable {
+     height: 120px;
+     /*-*/margin-bottom: 25px;
+}
+
+.titleTable td {
+     /*-*/height: 40px !important;
+     /*-*/padding-top: 20px;
+}
+
+.titleTable td a {
+     /*-*/padding-left: 0px;
+}
+
+.titleTable ul.tabs {
+     padding-right: 15px;
+}
+
+.titleTable tr:first-child td div {
+     padding-right: 20px;
+}
+
+.titleTable tr:first-child td div a:hover {
+     color: #ccc;
+}
+
+#menu-end {
+     display: none;
+}
+
+.noBorder > tbody > tr > td:nth-child(1) {
+     /*-*/width: 100px !important;
+}
+
+a.newSearch:hover {
+     color: #ccc;
+}
+
+a#showMoreOptions:hover {
+     color: #ccc;
+}
+
+#hideShowOptions {
+     padding: 10px;
+}
+
+#div_searchName {
+     margin-left: 0 !important;
+     margin-top: 6px;
+}
+
+#div_searchISBNOrISSN {
+     margin-left: 0 !important;
+     margin-top: 6px;
+}
+
+#div_searchFund {
+     margin-left: 0 !important;
+     margin-top: 6px;
+}
+
+#div_searchID {
+     margin-left: 0 !important;
+     margin-top: 6px;
+}
+
+#div_searchResourceNote {
+     margin-left: 0 !important;
+     margin-top: 6px;
+}
+
+.searchButton {
+     text-transform: uppercase;
+}
+
+#searchResourceIDButton {
+     text-transform: uppercase;
+}
+
+#searchCreateDateEnd {
+     margin-left: 7px;
+     margin-bottom: 10px;
+}
+
+img[src*="menu-bar.gif"] {
+    display: none;
+}
+
+img[src*="arrowup.png"] {
+    padding-left: 6px;
+}
+
+.noBorderTable td {
+     vertical-align: middle !important;
+}
+
+/*--- Table Column Widths ---*/
+
+table.dataTable th:nth-of-type(1) {
+     min-width: 240px;
+}
+
+table.dataTable th:nth-of-type(2) {
+     min-width: 100px;
+}
+
+table.dataTable th:nth-of-type(3) {
+     min-width: 150px;
+}
+
+table.dataTable th:nth-of-type(4) {
+     min-width: 100px;
+}
+
+/*-----*/
+
+#div_searchResults > span:nth-child(2) {
+     padding-right: 20px;
+}
+
+a.setPage:hover {
+     text-decoration: none;
+     color: #ccc;
+}
+
+.noBorderTable tr td {
+     background: none;
+}
+
+/*--- Links with Icons ---*/
+
+a.newSearch:before {
+  font-family: FontAwesome;
+  content: "\f00e";
+  font-size: 11px;
+  margin-right: 3px;
+}
+
+a.newSearch {
+     text-decoration: none;
+     text-transform: capitalize;
+     font-size: 12px;
+}
+
+a.newSearch:hover {
+     color: #ccc;
+}
+
+a#logout:before {
+  font-family: FontAwesome;
+  content: "\f007";
+  font-size: 11px;
+  margin-right: 3px;
+}
+
+a#logout {
+     text-decoration: none;
+     text-transform: capitalize;
+     font-size: 12px;
+     position: relative;
+     top: 4px;
+     left: -4px;
+}
+
+a#logout:hover {
+     color: #ccc;
+}
+
+a#showMoreOptions:before {
+  font-family: FontAwesome;
+  content: "\f055";
+  font-size: 11px;
+  margin-right: 3px;
+}
+
+a#showMoreOptions {
+     text-decoration: none;
+     text-transform: capitalize;
+     font-size: 12px;
+}
+
+a#showMoreOptions:hover {
+     color: #ccc;
+}
+
+#print-view a.helpfulLink:before {
+  font-family: FontAwesome;
+  content: "\f02f";
+  font-size: 11px;
+  margin-right: 3px;
+}
+
+#print-view a {
+     text-decoration: none;
+     text-transform: capitalize;
+     font-size: 12px;
+}
+
+#print-view a:hover {
+     color: #ccc;
+}
+
+td.searchRow > b {
+     color: #fff;
+     font-weight: normal;
+     position: relative;
+     top: 6px;
+}
+
+td.searchRow input,
+td.searchRow select,
+td.searchRow multiple,
+td.searchRow textarea {
+  margin-top: 5px;
+}
+
+#div_additionalSearch > table > tbody > tr:nth-child(3) > td a.dp-choose-date {
+     margin-top: 5px;
+}
+
+#span_resourceName {
+     padding: 25px 20px;
+     padding-top: 0;
+}
+
+.span_AttachmentNumber {
+     color: #FFF654;
+     margin-left: 0px !important;
+}
+
+.sidemenuselected .span_AttachmentNumber {
+     color: #666672;
+}
+
+.sidemenuunselected .span_AttachmentNumber {
+     color: #FFF654;
+     margin-left: 0px !important;
+}
+
+.resource_tab_content {
+     width: 630px !important;
+}
+
+.sidemenu {
+     width: 170px;
+     float: left;
+      margin-right: 8px;
+}
+
+.mainContent {
+     width: 430px;
+     padding: 10px;
+}
+
+.linedFormTable {
+     width: 430px !important;
+}
+
+.rightPanel {
+     text-align: left;
+}
+
+div.rightPanelLink {
+     margin: 0;
+     font-size: 12px;
+}
+
+div.rightPanelHeader {
+     color: #1B76A9;
+     margin-bottom: 5px;
+}
+
+#title-search {
+     padding: 20px;
+     padding-top: 0;
+     padding-bottom: 10px;
+     margin-bottom: 10px;
+}
+
+input[type="button"]:hover {
+     cursor: pointer;
+}
+
+table.surroundBox table.noBorder {
+     margin: 15px !important;
+}
+
+#resourcePromptForm table.noBorderTable input {
+     color: #FFFFFF;
+     font-family: "Arial", sans-serif;
+     font-size: 11px;
+     font-weight: normal;
+     background: #1b76a9;
+     border: none;
+     padding: 5px 10px;
+     text-transform: capitalize;
+}
+
+#pagination-div {
+     vertical-align: bottom;
+     text-align: left;
+     clear:both;
+     margin-top: 12px;
+}
+
+td#org-title {
+     width: auto !important;
+     margin: 0;
+     padding: 6px;
+     border-width: 1px 0 0 0;
+     border-style: solid;
+     border-color: #e6e5e9;
+     background-color: #cad7e1;
+     -moz-border-radius: 0px;
+     background: rgba(200, 200, 200, 0.5) url(../images/bg-diagonal-stripes.png) repeat top left !important;
+}
+
+#organizationForm table.thickboxTable table.noBorderTable input {
+     color: #FFFFFF;
+     font-family: "Arial", sans-serif;
+     font-size: 11px;
+     font-weight: normal;
+     background: #1b76a9;
+     border: none;
+     padding: 5px 10px;
+     text-transform: capitalize;
+}
+
+/*--- Organizations Side Menu Icons ---*/
+
+a.showOrganization:before {
+  font-family: FontAwesome;
+  content: "\f1ad";
+  font-size: 11px;
+  margin-right: 5px;
+}
+
+a.showOrganization {
+     text-decoration: none;
+     text-transform: capitalize;
+     font-size: 12px;
+}
+
+a.showOrganization:hover {
+     color: #ccc;
+}
+
+#div_organization .sidemenuselected .link:before {
+     font-family: FontAwesome;
+     content: "\f1ad";
+     font-size: 11px;
+     margin-right: 5px;
+}
+
+a.showAliases:before {
+  font-family: FontAwesome;
+  content: "\f061";
+  font-size: 11px;
+  margin-right: 5px;
+}
+
+a.showAliases {
+     text-decoration: none;
+     text-transform: capitalize;
+     font-size: 12px;
+}
+
+a.showAliases:hover {
+     color: #ccc;
+}
+
+#div_aliases .sidemenuselected .link:before {
+     font-family: FontAwesome;
+     content: "\f061";
+     font-size: 11px;
+     margin-right: 5px;
+}
+
+a.showContacts:before {
+  font-family: FontAwesome;
+  content: "\f234";
+  font-size: 11px;
+  margin-right: 5px;
+}
+
+a.showContacts {
+     text-decoration: none;
+     text-transform: capitalize;
+     font-size: 12px;
+}
+
+a.showContacts:hover {
+     color: #ccc;
+}
+
+#div_contacts .sidemenuselected .link:before {
+     font-family: FontAwesome;
+     content: "\f0c6";
+     font-size: 11px;
+     margin-right: 5px;
+}
+
+a.showAccount:before {
+  font-family: FontAwesome;
+  content: "\f0c0";
+  font-size: 11px;
+  margin-right: 5px;
+}
+
+a.showAccount {
+     text-decoration: none;
+     text-transform: capitalize;
+     font-size: 12px;
+}
+
+a.showAccount:hover {
+     color: #ccc;
+}
+
+#div_account .sidemenuselected .link:before {
+     font-family: FontAwesome;
+     content: "\f0c0";
+     font-size: 11px;
+     margin-right: 5px;
+}
+
+a.showIssues:before {
+  font-family: FontAwesome;
+  content: "\f071";
+  font-size: 11px;
+  margin-right: 5px;
+}
+
+a.showIssues {
+     text-decoration: none;
+     text-transform: capitalize;
+     font-size: 12px;
+}
+
+a.showIssues:hover {
+     color: #ccc;
+}
+
+#div_issues .sidemenuselected .link:before {
+     font-family: FontAwesome;
+     content: "\f071";
+     font-size: 11px;
+     margin-right: 5px;
+}
+
+a.showLicenses:before {
+  font-family: FontAwesome;
+  content: "\f044";
+  font-size: 11px;
+  margin-right: 5px;
+}
+
+a.showLicenses {
+     text-decoration: none;
+     text-transform: capitalize;
+     font-size: 12px;
+}
+
+a.showLicenses:hover {
+     color: #ccc;
+}
+
+#div_licenses .sidemenuselected .link:before {
+     font-family: FontAwesome;
+     content: "\f044";
+     font-size: 11px;
+     margin-right: 5px;
+}
+
+div#div_organizationDetails i {
+     padding-left: 10px;
+}
+
+#print-view {
+     width: 220px;
+     float: right;
+     padding: 20px;
+     background: #fff;
+}
+
+#search_box .fa-search:before {
+     position: relative;
+     top: -18px;
+     left: -198px;
+     font-size: 11px;
+}
+
+#span_orgName {
+     padding: 25px 20px;
+     padding-top: 0;
+}
+
+#print-view h4 {
+     margin-top: 20px !important;
+     margin-bottom: 5px;
+     color: #1B76A9;
+}
+
+#org-name a {
+     text-decoration: underline;
+}
+
+#print-view a.helpfulLink {
+     text-decoration: underline !important;
+}
+
+a.helpfulLink {
+     text-decoration: underline !important;
+}
