--- a/css/thickbox.css
+++ b/css/thickbox.css
@@ -1,7 +1,12 @@
 /* ----------------------------------------------------------------------------------------------------------------*/
 /* ---------->>> global settings needed for thickbox <<<-----------------------------------------------------------*/
 /* ----------------------------------------------------------------------------------------------------------------*/
-*{padding: 0; margin: 0;}
+
+* {
+	padding: 0;
+	margin: 0;
+	border-spacing: 0px;
+}
 
 /* ----------------------------------------------------------------------------------------------------------------*/
 /* ---------->>> thickbox specific link and font settings <<<------------------------------------------------------*/
@@ -48,15 +53,15 @@
 }
 
 #TB_window {
-	position: fixed;
-	background: #ffffff;
-	z-index: 102;
-	color:#000000;
-	display:none;
-	border: 4px solid #525252;
-	text-align:left;
-	top:50%;
-	left:50%;
+     position: fixed;
+     background: #ffffff;
+     z-index: 102;
+     color:#000000;
+     display:none;
+     border: 4px solid #525252;
+     text-align:left;
+     top:50%;
+     left:50%;
 }
 
 * html #TB_window { /* ie6 hack */
@@ -112,7 +117,9 @@ margin-top: expression(0 - parseInt(this.offsetHeight / 2) + (TBWindowMargin = d
 }
 
 #TB_ajaxContent.TB_modal{
-	padding:15px;
+	padding: 5px;
+	width: auto !important;
+	height: auto !important;
 }
 
 #TB_ajaxContent p{
