--- a/css/thickbox.css
+++ b/css/thickbox.css
@@ -14,6 +14,7 @@
 #TB_window {
 	font: 12px Arial, Helvetica, sans-serif;
 	color: #3D545D;
+	width: auto !important;
 }
 
 #TB_secondLine {
@@ -62,6 +63,7 @@
      text-align:left;
      top:50%;
      left:50%;
+     width: auto !important;
 }
 
 * html #TB_window { /* ie6 hack */
@@ -114,6 +116,8 @@ margin-top: expression(0 - parseInt(this.offsetHeight / 2) + (TBWindowMargin = d
 	overflow:auto;
 	text-align:left;
 	line-height:1.4em;
+	height: auto !important;
+	width: auto !important;
 }
 
 #TB_ajaxContent.TB_modal{
