--- a/css/style.css
+++ b/css/style.css
@@ -1400,8 +1400,7 @@ table.thickboxTable .headerText {
 	padding: 5px 10px;
 	text-transform: capitalize;
 	margin-left: 5px;
-	position: relative;
-	left: -74px;
+	float: left;
 }
 
 #div_issueForm input[value=cancel]:hover {
@@ -1468,11 +1467,29 @@ table.thickboxTable .headerText {
 	border: none;
 	padding: 5px 10px;
 	text-transform: capitalize;
-	position: relative;
-	left: -90px;
+	float: left;
 }
 
 #div_updateForm input[value=cancel]:hover {
+	cursor: pointer;
+}
+
+/*--- Add New User Form Modal Window ---*/
+
+#div_updateForm input[value=Add\ New] {
+	color: #FFFFFF;
+	font-family: "Arial", sans-serif;
+	font-size: 11px;
+	font-weight: normal;
+	background: #1b76a9;
+	border: none;
+	padding: 5px 10px;
+	text-transform: capitalize;
+	margin-left: 5px;
+	float: left;
+}
+
+#div_updateForm input[value=Add\ New]:hover {
 	cursor: pointer;
 }
 
