--- a/css/style.css
+++ b/css/style.css
@@ -1971,11 +1971,13 @@ span#divider {
 	padding: 13px 0 12px;
     color: #fff;
     height: initial;
+    text-align: center;
 }
 
 #change-mod-menu img {
-    margin-right: 8px;
-    vertical-align: middle;
+    position: absolute;
+    left: 10px;
+    top: 10px;
 }
 
 #change-mod-menu .fa-chevron-down {
@@ -1988,6 +1990,7 @@ span#divider {
 li.change-mod-item {
     background: #4d4d4d;
     height: initial !important;
+    text-align: left;
 }
 
 li.change-mod-item a {
@@ -1996,6 +1999,9 @@ li.change-mod-item a {
     font-size: 14px;
     padding: 10px !important;
     margin: 0;
+    line-height: 18px !important;
+    position: relative !important;
+    padding-left: 35px !important;
 }
 
 .change-mod-item a span {
