--- a/css/style.css
+++ b/css/style.css
@@ -2067,3 +2067,19 @@ table.titleTable {
 #main-table {
     margin: 0 30px;
 }
+
+/*--- Allow Browser to Scroll When Modal Appears ---*/
+
+#TB_window {
+	position: absolute !important;
+	margin-top: 100px !important;
+	top: 0 !important;
+}
+
+/*--- Allow for Language Changes to Helpful Links Side Menu ---*/
+
+#side-menu-title {
+    font-size: 21px;
+    font-weight: 600;
+    padding-bottom: 15px;
+}
